--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 
 		<meta name="twitter:title" content="October's Very Own">
 		<meta name="twitter:description" content="October's Very Own">
-		<meta name="twitter:image" content="https://cdn.shopify.com/s/files/1/0973/7782/files/twittercard-ovo.jpg?11987394894260353310">
+		<meta name="twitter:image" content="">
 
         
-        <link rel="canonical" href="https://us.octobersveryown.com/">
+        <link rel="canonical" href="">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="theme-color" content="#000">
         <meta name="apple-itunes-app" content="app-id=1135667527">
@@ -155,7 +155,7 @@
 
 
 
-<link href="https://monorail-edge.shopifysvc.com" rel="dns-prefetch">
+
 <script>(function(){if ("sendBeacon" in navigator && "performance" in window) {var session_token = document.cookie.match(/_shopify_s=([^;]*)/);function handle_abandonment_event(e) {var entries = performance.getEntries().filter(function(entry) {return /monorail-edge.shopifysvc.com/.test(entry.name);});if (!window.abandonment_tracked && entries.length === 0) {window.abandonment_tracked = true;var currentMs = Date.now();var navigation_start = performance.timing.navigationStart;var payload = {shop_id: 11375270,url: window.location.href,navigation_start,duration: currentMs - navigation_start,session_token: session_token && session_token.length === 2 ? session_token[1] : "",page_type: "index"};window.navigator.sendBeacon("https://monorail-edge.shopifysvc.com/v1/produce", JSON.stringify({schema_id: "online_store_buyer_site_abandonment/1.1",payload: payload,metadata: {event_created_at_ms: currentMs,event_sent_at_ms: currentMs}}));}}window.addEventListener('pagehide', handle_abandonment_event);}}());</script>
 <script>window.ShopifyAnalytics = window.ShopifyAnalytics || {};
 window.ShopifyAnalytics.meta = window.ShopifyAnalytics.meta || {};
